--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -81,11 +81,6 @@
             <version>1.0.14</version>
         </dependency>
         <dependency>
-            <groupId>xml-apis</groupId>
-            <artifactId>xml-apis</artifactId>
-            <version>2.0.2</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>${spring.sec.version}</version>
@@ -163,17 +158,38 @@
                 <version>2.6</version>
                 <configuration>
                     <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                    <warName>${client}</warName>
                     <webResources>
                         <resource>
-                            <!-- this is relative to the pom.xml directory -->
-                            <directory>config/spring</directory>
+                            <!-- these will now be copied to the webapp directory  -->
+                            <directory>clients/${client}</directory>
+                            <excludes>
+                                <exclude>clients/${client}/resources/language/**</exclude>
+                            </excludes>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/resources/language/</directory>
+                            <includes>
+                                <include>**/*.properties</include>
+                            </includes>
+                            <!-- override the destination directory for this resource -->
+                            <targetPath>WEB-INF/classes</targetPath>
+                        </resource>
+                        <resource>
+                            <directory>src/main/webapp/META-INF</directory>
+                            <includes>
+                                <include>context.xml</include>
+                            </includes>
+                            <filtering>true</filtering>
+                            <!-- override the destination directory for this resource -->
+                            <targetPath>META-INF</targetPath>
                         </resource>
                     </webResources>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    
+
     <repositories>
         <repository>
             <id>m2proxy.atlassian.com</id>
