--- a/talent-studio-application/pom.xml
+++ b/talent-studio-application/pom.xml
@@ -50,16 +50,11 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.9</version>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>commons-collections</groupId>-->
-        <!--<artifactId>commons-collections</artifactId>-->
-        <!--<version>3.2</version>-->
-        <!--</dependency>-->
-        <!-- testing -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.2</version>
+            <groupId>ojdbc</groupId>
+            <artifactId>ojdbc</artifactId>
+            <version>14</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
