--- a/talent-studio-application/pom.xml
+++ b/talent-studio-application/pom.xml
@@ -51,10 +51,11 @@
             <version>2.3.9</version>
         </dependency>
         <dependency>
-            <groupId>ojdbc</groupId>
-            <artifactId>ojdbc</artifactId>
-            <version>14</version>
-            <scope>test</scope>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc7</artifactId>
+            <!--<artifactId>ojdbc6</artifactId>-->
+            <version>14.0.0</version>
+            <!--<version>11.2.0</version>-->
         </dependency>
     </dependencies>
 
