poms being updated to support filtering, still need to decide what to do about the spring files which currently sit under the application but are filtered in the war and sit in the war classes dor not the app lib!! - they should go in the app jar

--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -161,12 +161,28 @@
                     <warName>${war.name}</warName>
                     <webResources>
                         <resource>
-                            <!-- these will now be copied to the webapp directory  -->
-                            <directory>clients/${client}</directory>
-                            <excludes>
-                                <exclude>clients/${client}/resources/language/**</exclude>
-                                <exclude>clients/${client}/templates/**</exclude>
-                            </excludes>
+                            <directory>clients/${client}/</directory>
+                            <includes>
+                                <include>help/**</include>
+                            </includes>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/</directory>
+                            <includes>
+                                <include>images/**</include>
+                            </includes>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/</directory>
+                            <includes>
+                                <include>statics/**</include>
+                            </includes>
+                        </resource>
+                        <resource>
+                            <directory>clients/${client}/</directory>
+                            <includes>
+                                <include>styles/**</include>
+                            </includes>
                         </resource>
                         <resource>
                             <directory>clients/${client}/resources/language/</directory>
