Ignore .iml files
Modded the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ talent-studio-views/src/main/webapp/images/objectives/Thumbs.db
 *.db
 talent-studio-application/talent-studio-application.iml
 *.iml
+*.iml
