--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -196,6 +196,7 @@
                             <includes>
                                 <include>**/*.properties</include>
                             </includes>
+                            <filtering>true</filtering>
                             <!-- override the destination directory for this resource -->
                             <targetPath>WEB-INF/classes</targetPath>
                         </resource>
@@ -204,7 +205,6 @@
                             <includes>
                                 <include>**/*.properties</include>
                             </includes>
-                            <!-- override the destination directory for this resource -->
                             <filtering>true</filtering>
                         </resource>
                         <resource>
@@ -213,7 +213,6 @@
                                 <include>context.xml</include>
                             </includes>
                             <filtering>true</filtering>
-                            <!-- override the destination directory for this resource -->
                             <targetPath>META-INF</targetPath>
                         </resource>
                     </webResources>
