--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <!-- todo this will change -->
     <groupId>com.zynap</groupId>
     <artifactId>talent-studio</artifactId>
-    <version>v5.4.8-SNAPSHOT</version>
+    <version>${build.version}-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <name>Talent Evolution</name>
@@ -239,6 +239,15 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <releaseProfiles>release</releaseProfiles>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
@@ -276,11 +285,8 @@
         </profile>
         <profile>
             <id>home</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <properties>
-                <db.url>jdbc:oracle:thin:@localhost:1521:STOC</db.url>
+                <db.url>jdbc:oracle:thin:@poseidon:1521:XE</db.url>
                 <db.password>tsdev</db.password>
                 <db.username>tsdev</db.username>
                 <host.name>localhost</host.name>
