--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -6,10 +6,11 @@
     <parent>
         <groupId>com.zynap</groupId>
         <artifactId>talent-studio</artifactId>
-        <version>v5.4.4-mt-SNAPSHOT</version>
+        <version>${build.version}-SNAPSHOT</version>
     </parent>
 
     <artifactId>talent-studio-views</artifactId>
+    <version>${build.version}-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>talent-studio-views</name>
@@ -22,12 +23,20 @@
         <dependency>
             <groupId>com.zynap</groupId>
             <artifactId>talent-studio-application</artifactId>
-            <version>v5.4.4-mt-SNAPSHOT</version>
+            <version>${build.version}-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.zynap</groupId>
             <artifactId>talent-studio-integration</artifactId>
-            <version>v5.4.4-mt-SNAPSHOT</version>
+            <version>${build.version}-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <!-- todo remove this dependency and use mockito instead -->
+            <groupId>com.zynap</groupId>
+            <artifactId>talent-studio-application</artifactId>
+            <version>${build.version}-SNAPSHOT</version>
+            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -234,6 +243,9 @@
                     <excludes>
                         <!-- todo update the excludes -->
                         <exclude>**/*.min.js</exclude>
+                        <exclude>**/AJS.js</exclude>
+                        <exclude>**/jquery.color.js</exclude>
+                        <exclude>**/jquery.tablesorter.pager.js</exclude>
                         <exclude>**/questionnaires.js</exclude>
                     </excludes>
                     <nosuffix>true</nosuffix>
