modifications doen to support embedded tomcat 7 for running within maven, not got this to work but movement of the applicationContext-mail made sense anyway, and the versioning got changed due to tomcat7 :( grrrrr but it was half half anyway, i would like to make it a property for the whole thing and not just the number!!

--- a/talent-studio-integration-client/pom.xml
+++ b/talent-studio-integration-client/pom.xml
@@ -7,23 +7,23 @@
     <parent>
         <groupId>com.zynap</groupId>
         <artifactId>talent-studio</artifactId>
-        <version>${build.version}-SNAPSHOT</version>
+        <version>5.4.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>talent-studio-integration-client</artifactId>
-    <version>${build.version}-SNAPSHOT</version>
+    <version>5.4.8-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>com.zynap</groupId>
             <artifactId>talent-studio-integration</artifactId>
-            <version>v5.4.8-SNAPSHOT</version>
+            <version>5.4.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.zynap</groupId>
             <artifactId>talent-studio-application</artifactId>
-            <version>v5.4.8-SNAPSHOT</version>
+            <version>5.4.8-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
