--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <!-- todo this will change -->
     <groupId>com.zynap</groupId>
     <artifactId>talent-studio</artifactId>
-    <version>${build.version}-SNAPSHOT</version>
+    <version>5.4.8-SNAPSHOT</version>
 
     <packaging>pom</packaging>
     <name>Talent Evolution</name>
@@ -245,14 +245,6 @@
                 <configuration>
                     <tagNameFormat>v@{project.version}</tagNameFormat>
                     <releaseProfiles>release</releaseProfiles>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <path>/</path>
                 </configuration>
             </plugin>
         </plugins>
