--- a/talent-studio-application/pom.xml
+++ b/talent-studio-application/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>com.zynap</groupId>
         <artifactId>talent-studio</artifactId>
-        <version>${build.version}-SNAPSHOT</version>
+        <version>5.4.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>talent-studio-application</artifactId>
-    <version>${build.version}-SNAPSHOT</version>
+    <version>5.4.8-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>talent-studio-application</name>
