--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -145,17 +145,19 @@
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>javax.servlet.jsp-api</artifactId>
             <version>2.2.1</version>
+            <scope>provided</scope>
         </dependency>
         <!-- testing jars -->
-        <dependency>
-            <groupId>org.glassfish.web</groupId>
-            <artifactId>jstl-impl</artifactId>
-            <version>1.2</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.glassfish.web</groupId>-->
+            <!--<artifactId>jstl-impl</artifactId>-->
+            <!--<version>1.2</version>-->
+            <!--<scope>testing</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>2.5.6.SEC03</version>
+            <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -269,7 +271,6 @@
                                 <include>helpText.js</include>
                                 <include>messages.js</include>
                                 <include>objectives.js</include>
-                                <include>orgunits.js</include>
                             </includes>
                         </aggregation>
                     </aggregations>
