--- a/talent-studio-views/pom.xml
+++ b/talent-studio-views/pom.xml
@@ -147,6 +147,24 @@
             <version>2.2.1</version>
             <scope>provided</scope>
         </dependency>
+        <!-- rest dependencies -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.2</version>
+        </dependency>
         <!-- testing jars -->
         <!--<dependency>-->
             <!--<groupId>org.glassfish.web</groupId>-->
