update to the build this will record the version date and time and user for the new build (needs testing)

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <build.date.time>${maven.build.timestamp}</build.date.time>
+        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+        <build.user>dhanson</build.user>
         <build.version>v5.4.8</build.version>
+        <build.info>${build.version} ${build.user} ${build.date.time}</build.info>
         <build.year>2015</build.year>
         <hibernate.version>2.1.8</hibernate.version>
         <spring.sec.version>3.2.9.RELEASE</spring.sec.version>
